; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_parser_push_lexeme.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_parser_push_lexeme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i32 }
%struct.lexeme = type { i32 }
%struct.stacked_lexeme = type { i32, %struct.lexeme }

@.str = private unnamed_addr constant [29 x i8] c"Could not push parser lexeme\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parser*, %struct.lexeme*)* @parser_push_lexeme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parser_push_lexeme(%struct.parser* %0, %struct.lexeme* %1) #0 {
  %3 = alloca %struct.parser*, align 8
  %4 = alloca %struct.lexeme*, align 8
  %5 = alloca %struct.stacked_lexeme*, align 8
  store %struct.parser* %0, %struct.parser** %3, align 8
  store %struct.lexeme* %1, %struct.lexeme** %4, align 8
  %6 = call %struct.stacked_lexeme* @malloc(i32 8)
  store %struct.stacked_lexeme* %6, %struct.stacked_lexeme** %5, align 8
  %7 = load %struct.stacked_lexeme*, %struct.stacked_lexeme** %5, align 8
  %8 = icmp ne %struct.stacked_lexeme* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %2
  %12 = load %struct.stacked_lexeme*, %struct.stacked_lexeme** %5, align 8
  %13 = getelementptr inbounds %struct.stacked_lexeme, %struct.stacked_lexeme* %12, i32 0, i32 1
  %14 = load %struct.lexeme*, %struct.lexeme** %4, align 8
  %15 = bitcast %struct.lexeme* %13 to i8*
  %16 = bitcast %struct.lexeme* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 %16, i64 4, i1 false)
  %17 = load %struct.parser*, %struct.parser** %3, align 8
  %18 = getelementptr inbounds %struct.parser, %struct.parser* %17, i32 0, i32 0
  %19 = load %struct.stacked_lexeme*, %struct.stacked_lexeme** %5, align 8
  %20 = getelementptr inbounds %struct.stacked_lexeme, %struct.stacked_lexeme* %19, i32 0, i32 0
  %21 = call i32 @list_add(i32* %18, i32* %20)
  ret void
}

declare dso_local %struct.stacked_lexeme* @malloc(i32) #1

declare dso_local i32 @lwan_status_critical_perror(i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @list_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
